fix: organization scoped package name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "pubq-js",
+    "name": "@pubq/pubq-js",
     "version": "1.0.0",
     "description": "Javascript Client for Pubq",
     "main": "dist/pubq.js",
