--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "socketcluster-client": "^17.1.1"
     },
     "devDependencies": {
+        "lodash": "^4.17.21",
         "webpack": "^5.80.0",
         "webpack-cli": "^5.0.2"
     }
