--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-PUBQ_PUBSUB_HOSTNAME=pubsub.pubq.io
+PUBQ_PUBSUB_HOSTNAME=rt.pubq.io
 PUBQ_PUBSUB_SECURE=true
 PUBQ_PUBSUB_PORT=443
 PUBQ_PUBSUB_PATH=/
