--- a/package.json
+++ b/package.json
@@ -27,10 +27,10 @@
     "homepage": "https://pubq.io",
     "dependencies": {
         "axios": "^1.5.0",
-        "socketcluster-client": "^17.1.1"
+        "socketcluster-client": "^17.1.1",
+        "store": "^2.0.12"
     },
     "devDependencies": {
-        "lodash": "^4.17.21",
         "ts-loader": "^9.4.4",
         "typescript": "^5.2.2",
         "webpack": "^5.80.0",
