--- a/package.json
+++ b/package.json
@@ -27,8 +27,7 @@
     "homepage": "https://pubq.io",
     "dependencies": {
         "axios": "^1.5.0",
-        "socketcluster-client": "^17.1.1",
-        "store": "^2.0.12"
+        "socketcluster-client": "^17.1.1"
     },
     "devDependencies": {
         "ts-loader": "^9.4.4",
