--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "homepage": "https://pubq.io",
     "dependencies": {
         "axios": "^1.5.0",
+        "eventemitter3": "^5.0.1",
         "socketcluster-client": "^17.1.1"
     },
     "devDependencies": {
