--- a/package.json
+++ b/package.json
@@ -2,9 +2,12 @@
     "name": "@pubq/pubq-js",
     "version": "7.1.2",
     "description": "PUBQ JavaScript SDK",
-    "main": "bundle/pubq.js",
+    "main": "build/node/pubq.js",
+    "browser": "build/web/pubq.js",
     "scripts": {
-        "build": "npx webpack"
+        "build": "rm -rf build/ && npm run build:node && npm run build:web",
+        "build:node": "rm -rf types/ && tsc",
+        "build:web": "npx webpack && npx webpack --mode production"
     },
     "repository": {
         "type": "git",
@@ -35,5 +38,8 @@
         "typescript": "^5.2.2",
         "webpack": "^5.80.0",
         "webpack-cli": "^5.0.2"
+    },
+    "engines": {
+        "node": ">=5.10.x"
     }
 }
