--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,15 @@
 {
     "compilerOptions": {
-        "target": "ES6",
+        "target": "ESNext",
         "module": "ESNext",
-        "outDir": "./bundle",
-        "rootDir": "./src",
-        "declaration": true,
-        "declarationDir": "./bundle",
+        "strict": true,
+        "forceConsistentCasingInFileNames": true,
         "esModuleInterop": true,
         "moduleResolution": "node",
-        "strict": true
+        "declaration": true,
+        "declarationDir": "./types",
+        "baseUrl": "./src",
+        "outDir": "./build/node"
     },
-    "include": ["src/**/*"],
-    "exclude": ["node_modules"]
+    "include": ["src/**/*"]
 }
