fix: added pubq.d.ts file

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,5 +11,5 @@
         "baseUrl": "./src",
         "outDir": "./build/node"
     },
-    "include": ["src/**/*"]
+    "include": ["src/**/*", "pubq.d.ts"]
 }
