--- a/package.json
+++ b/package.json
@@ -9,6 +9,18 @@
         "build:node": "rm -rf types/ && tsc && rm -rf build/node/types/",
         "build:web": "npx webpack && npx webpack --mode production"
     },
+    "exports": {
+        ".": {
+            "types": "./pubq.d.ts"
+        }
+    },
+    "typings": "./pubq.d.ts",
+    "files": [
+        "build/**",
+        "types/**",
+        "src/**",
+        "pubq.d.ts"
+    ],
     "repository": {
         "type": "git",
         "url": "git+ssh://git@github.com/pubqio/pubq-js.git"
@@ -40,6 +52,6 @@
         "webpack-cli": "^5.0.2"
     },
     "engines": {
-        "node": ">=5.10.x"
+        "node": ">=14"
     }
 }
