--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
     "compilerOptions": {
-        "target": "ESNext",
+        "target": "es5",
         "module": "CommonJS",
         "strict": true,
         "forceConsistentCasingInFileNames": true,
