--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "bugs": {
         "url": "https://github.com/pubqio/pubq-js/issues"
     },
-    "homepage": "https://pubq.io",
+    "homepage": "https://pubq.dev",
     "dependencies": {
         "axios": "^1.5.0",
         "eventemitter3": "^5.0.1",
